metadataPackage_1602884205764/objects/SMS_Template__c.object
<CustomObject>
    <label>SMS Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SMS Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Broker</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filters>
        <label>Broker</label>
    </listViews>
    <listViews>
        <fullName>Direct</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Direct</value>
        </filters>
        <label>Direct</label>
    </listViews>
</CustomObject>